--- a/index.html
+++ b/index.html
@@ -75,26 +75,22 @@
                     <div class="details-container">
                         <img src="./assets/experience.png" alt="Experience icon" class="icon" />
                         <h3>Experience</h3>
-                        <p>2+ years <br>Frontend Development</p>
+                        <p>1+ years Software & Web Development</p>
                     </div>
                     <div class="details-container">
                         <img src="./assets/education.png" alt="Education icon" class="icon" />
                         <h3>Education</h3>
-                        <p>B.Sc. Bachelor Degree <br>M.Sc. Masters Degree</p>
+                        <p>BASc in Software Engineering (CO-OP) (Ongoing)</p>
                     </div>
                 </div>
                 <div class="text-containers">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Eaque quae, magni vero atque tempora doloremque unde quis.
-                        Consectetur, quo architecto! Ipsam eligendi unde dolores
-                        obcaecati
-                        recusandae delectus. Delectus, quo ad.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Eaque quae, magni vero atque tempora doloremque unde quis.
-                        Consectetur, quo architecto! Ipsam eligendi unde dolores
-                        obcaecati
-                        recusandae delectus. Delectus, quo ad.
-                    </p>
+                    <p>I am a passionate software engineering student at the University of Ottawa, dedicated to creating impactful solutions
+                        and enhancing user experiences. I am driven by the challenge of learning new things and thrive in dynamic
+                        environments.Beyond my academic pursuits, I am an enthusiastic advocate for women in technology, mentoring and
+                        actively contributing to a supportive, inclusive community. Outside of tech, I love staying active through the gym
+                        and dance, diving into books, and expressing myself through fashion. I am also passionate about connecting with
+                        people from diverse backgrounds, bringing joy and positivity wherever I go.</p>
+                    
                 </div>
             </div>
         </div>
@@ -125,29 +121,29 @@
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>SASS</h3>
+                                <h3>JavaScript</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>JavaScript</h3>
-                                <p>Basic</p>
+                                <h3>React</h3>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>TypeScript</h3>
-                                <p>Basic</p>
+                                <h3>Bootstrap</h3>
+                                <p>Experienced</p>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
                                 <h3>Material UI</h3>
-                                <p>Intermediate</p>
+                                <p>Basic</p>
                             </div>
                         </article>
 
@@ -159,29 +155,29 @@
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>PostgreSQL</h3>
+                                <h3>SQL</h3>
                                 <p>Basic</p>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>Node JS</h3>
+                                <h3>Java</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                            <div>
+                                <h3>Python</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>Express JS</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-                            <div>
-                                <h3>Git</h3>
-                                <p>Intermediate</p>
+                                <h3>C#</h3>
+                                <p>Basic</p>
                             </div>
                         </article>
                     </div>
@@ -198,42 +194,42 @@
             <div class="about-containers">
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-1.png" alt="Project1" class="project-img" />
+                        <img src="./assets/project-1.jpg" alt="Project1" class="project-img" />
                     </div>
                     <h2 class="experience-sub-title project-title">Project One</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Ottawa-SEG2505-Automne2023/service-novigrad-seg2505-g22'">
                             Github
                         </button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://youtu.be/BWGS-94zWpw'">
                             Live Demo
                         </button>
                     </div>
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-2.png" alt="Project2" class="project-img" />
+                        <img src="./assets/project-2.jpg" alt="Project2" class="project-img" />
                     </div>
                     <h2 class="experience-sub-title project-title">Project two</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/gamellekmg/gamellekmg.github.io'">
                             Github
                         </button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://gamellekmg.github.io/'">
                             Live Demo
                         </button>
                     </div>
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-3.png" alt="Project3" class="project-img" />
+                        <img src="./assets/project-3.jpg" alt="Project3" class="project-img" />
                     </div>
                     <h2 class="experience-sub-title project-title">Project three</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/gamellekmg/glamhair_final'">
                             Github
                         </button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://gamellekmg.github.io/glamhair_final/'">
                             Live Demo
                         </button>
                     </div>
