--- a/index.html
+++ b/index.html
@@ -38,33 +38,26 @@
             </div>
         </div>
     </nav>
-    <section id="profile">
-        <div class="section__pic-container">
-            <img src="./assets/profile-pic.jpg" alt="Gamelle kamga profile picture">
-        </div>
-        <div class="section__text">
+    <section id="profile" class="hero-section">
+        <div class="overlay">
+          <div class="section__text">
             <p class="section__text__p1"> Hello, I'm</p>
-            <h1 class="tittle"> Gamelle Kamga</h1>
-            <p class="section__text__p2"> Frontend Developer</p>
+            <h1 class="title">Gamelle Kamga</h1>
+            <p class="section__text__p2">Fullstack Developer</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">
-                    Download CV
-                </button>
-                <button class="btn btn-color-1" onclick="location.href='#contact'">
-                    Contact Info
-                </button>
+              <button class="btn btn-color-2" onclick="window.open('./assets/Gamelle Kamgacv.pdf')">Download CV</button>
+              <button class="btn btn-color-1" onclick="location.href='#contact'">Contact Info</button>
             </div>
             <div class="socials-container">
-                <img src="./assets/linkedin.png" alt="My linkedin profile" class="icon"
-                    onclick="location.href='https://www.linkedin.com/in/gamellekamga/'" />
-                <img src="./assets/github.png" alt="My Github profile" class="icon"
-                    onclick="location.href='https://github.com/gamellekmg'" />
-
+              <img src="./assets/linkedin.png" class="icon" onclick="location.href='https://www.linkedin.com/in/gamellekamga/'" />
+              <img src="./assets/github.png" class="icon" onclick="location.href='https://github.com/gamellekmg'" />
             </div>
+          </div>
         </div>
-    </section>
+      </section>
+      
     <section id="about">
-        <p class="section__text__p1">Get To Know More</p>
+        <p class="section__text__p3">Get To Know More</p>
         <h1 class="title">About Me</h1>
         <div class="section-container">
             <div class="section__pic-container">
