--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <h2 class="experience-sub-title project-title">Project One</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Ottawa-SEG2505-Automne2023/service-novigrad-seg2505-g22'">
-                            Github
+                            About
                         </button>
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://youtu.be/BWGS-94zWpw'">
                             Live Demo
@@ -206,7 +206,7 @@
                     <h2 class="experience-sub-title project-title">Project two</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/gamellekmg/gamellekmg.github.io'">
-                            Github
+                            About
                         </button>
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://gamellekmg.github.io/'">
                             Live Demo
@@ -220,7 +220,7 @@
                     <h2 class="experience-sub-title project-title">Project three</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/gamellekmg/glamhair_final'">
-                            Github
+                            About
                         </button>
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://gamellekmg.github.io/glamhair_final/'">
                             Live Demo
