lien video cepap

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
             <p class="project-tech">HTML • CSS • JavaScript • PostgreSQL • Express.js • Node.js</p>
             <p>Here's our first ongoing project under AG Code & Design for an educational organization. An educational dashboard to organize and share teaching materials. File upload/download, category sorting, and user sign-in are already functional. Upcoming features include an admin dashboard to view event registrations, an event list for teachers, and support for uploading presentation videos.</p>
             <div class="project-links">
-                <a href="https://cepap-dashboard.netlify.app/" class="project-btn" target="_blank">
+                <a href="https://youtube.com/shorts/9aQSmGBBabw?feature=share" class="project-btn" target="_blank">
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                         <polyline points="15 3 21 3 21 9"></polyline>
