--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
         <div class="project-info">
             <h3>CEPAP – Educational Dashboard (In Progress)</h3>
             <p class="project-tech">HTML • CSS • JavaScript • PostgreSQL • Express.js • Node.js</p>
-            <p>Here's our first ongoing project under AG Code & Design for an educational organization. An educational dashboard to organize and share teaching materials. File upload/download, category sorting, and user sign-in are already functional. Upcoming features include an admin dashboard to view event registrations, an event list for teachers, and support for uploading presentation videos.</p>
+            <p>Here's my  first ongoing project under AG Code & Design for an educational organization. An educational dashboard to organize and share teaching materials. File upload/download, category sorting, and user sign-in are already functional. Upcoming features include an admin dashboard to view event registrations, an event list for teachers, and support for uploading presentation videos.</p>
             <div class="project-links">
                 <a href="https://youtu.be/Ip9gC4xd5Kk" class="project-btn" target="_blank">
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
