--- a/index.html
+++ b/index.html
@@ -420,7 +420,9 @@
         <div class="project-info">
             <h3>Hotel Management System</h3>
             <p class="project-tech">HTML • CSS • JavaScript • PostgreSQL • Express.js • Node.js</p>
-            <p>A hotel booking platform with a custom database built from scratch using PostgreSQL. The system manages hotel chains, rooms, and reservations while connecting the backend to the website for real-time booking and data management. Designed to support filters, search features, and user interactions for both staff and customers.</p>
+            <p>A hotel booking platform with a custom database built from scratch using PostgreSQL. The system manages hotel chains, rooms, and reservations while connecting the backend to the website for real-time booking and data management. 
+                Designed to support filters, search features, and user interactions for both staff and customers.
+            Database currently unavailable; a new one will be created soon to restore full functionality</p>
             <div class="project-links">
                 <a href="https://gamellekmg.github.io/Hotel-management-db/" class="project-btn" target="_blank">
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
