--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <div class="hero-logo">GK</div>
             <h1>Gamelle Kamga</h1>
             <p class="hero-subtitle">Full-Stack Software Engineer</p>
+            <p class="hero-subtitle">Student</p>
 
             <div class="cta-buttons">
                 <a href="#contact" class="btn btn-primary">
