--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 I’m a problem solver who works with both logic and heart. I love creating things that not only work well
                 but also help people in real life.
                 As a bilingual student (English and French) in software engineering, I’ve learned to stay calm and
-                organized even when life gets busy. During my last term, I managed a full-time internship, my university
+                organized even when life gets busy. During my last term, I managed a part-time internship, my university
                 classes, and tutoring high school students at the same time. It taught me how to plan, focus, and
                 support others all while keeping a positive attitude.
                 I also started a small personal project to help local small businesses build their websites and grow
