--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                             </svg>
                             Demo
                         </a>
-                        <a href="lien-vers-votre-pdf.pdf" class="project-btn" target="_blank">
+                        <a href="assets/cepap.pdf" class="project-btn" target="_blank">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2">
                                 <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
@@ -324,6 +324,53 @@
                         </a>
                     </div>
                 </div>
+
+            </div>
+            <div class="project-card">
+                <div class="project-image">
+                    <svg class="project-icon" viewBox="0 0 24 24">
+                        <rect x="3" y="3" width="7" height="7"></rect>
+                        <rect x="14" y="3" width="7" height="7"></rect>
+                        <rect x="14" y="14" width="7" height="7"></rect>
+                        <rect x="3" y="14" width="7" height="7"></rect>
+                    </svg>
+                </div>
+                <div class="project-info">
+                    <h3>UYP-PMS – Pharmacy Prescription Management System</h3>
+                    <p class="project-tech">
+                        Angular • NestJS • PostgreSQL • Prisma • Docker • Docker Compose
+                    </p>
+                    <p>
+                        A full-stack web application designed to simulate real-world pharmacy prescription workflows.
+                        The system supports role-based access (Admin, Pharmacist, Assistant), secure user
+                        authentication,
+                        and end-to-end prescription handling, including prescription creation and preparation.
+                        The application is fully containerized, allowing a simple and consistent setup using Docker
+                        Compose.
+                    </p>
+                    <div class="project-links">
+                        <a href="https://youtu.be/YOUR_VIDEO_LINK" class="project-btn" target="_blank">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <polygon points="5 3 19 12 5 21 5 3"></polygon>
+                            </svg>
+                            Demo
+                        </a>
+                        <a href="assets/Technical Report – UYP-PMS.pdf" class="project-btn" target="_blank">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                                <polyline points="14 2 14 8 20 8"></polyline>
+                                <line x1="16" y1="13" x2="8" y2="13"></line>
+                                <line x1="16" y1="17" x2="8" y2="17"></line>
+                                <polyline points="10 9 9 9 8 9"></polyline>
+                            </svg>
+                            Technical Report
+                        </a>
+                    </div>
+                </div>
+
+
             </div>
             <div class="project-card">
                 <div class="project-image">
@@ -452,7 +499,7 @@
             </div>
 
 
-            <div class="project-card">
+            <!-- <div class="project-card">
                 <div class="project-image">
                     <svg class="project-icon" viewBox="0 0 24 24">
                         <path d="M3 21h18"></path>
@@ -486,10 +533,10 @@
                         </a>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
 
-            
+
         </div>
     </section>
 
