--- a/index.html
+++ b/index.html
@@ -227,6 +227,90 @@
             </div>
         </div>
     </section>
+    <section id="concepts">
+        <div class="section-header">
+            <p class="section-tag">Foundations</p>
+            <h2 class="section-title">Engineering Concepts & Technical Knowledge</h2>
+        </div>
+
+        <div class="about-content">
+            <p class="about-text">
+                Beyond tools and programming languages, I have developed a strong understanding of core software
+                engineering
+                concepts through my academic training and personal projects. I enjoy learning how systems behave, how
+                problems can be analyzed from different angles, and how thoughtful design decisions improve reliability
+                and maintainability.
+            </p>
+
+            <div class="concepts-grid">
+                <div class="concept-card">
+                    <h3>Software Design & Analysis</h3>
+                    <p>
+                        Requirement analysis, understanding epics and user stories, translating functional needs into
+                        technical solutions, and reasoning about system behavior before implementation.
+                    </p>
+                </div>
+
+                <div class="concept-card">
+                    <h3>Testing & Validation</h3>
+                    <p>
+                        Understanding of test cases, test scenarios, edge cases, and validation strategies to ensure
+                        software behaves as expected and meets specifications.
+                    </p>
+                </div>
+
+                <div class="concept-card">
+                    <h3>Problem Solving & Debugging</h3>
+                    <p>
+                        Logical reasoning, step by step debugging, identifying root causes, and proposing alternative
+                        solutions when initial approaches do not work.
+                    </p>
+                </div>
+
+                <div class="concept-card">
+                    <h3>Automation & Scripting</h3>
+                    <p>
+                        Writing scripts to automate repetitive tasks, simplify workflows, and support testing or data
+                        processing activities.
+                    </p>
+                </div>
+
+                <div class="concept-card">
+                    <h3>Distributed Systems Concepts</h3>
+                    <p>
+                        Basic understanding of client server communication, APIs, RPC based communication such as gRPC,
+                        and how services interact in modern systems.
+                    </p>
+                </div>
+
+                <div class="concept-card">
+                    <h3>Networking Fundamentals</h3>
+                    <p>
+                        Foundational knowledge of networking concepts such as TCP IP communication and basic routing
+                        ideas
+                        studied during coursework.
+                    </p>
+                </div>
+
+                <div class="concept-card">
+                    <h3>Machine Learning Awareness</h3>
+                    <p>
+                        Conceptual understanding of machine learning principles including data driven models, training,
+                        evaluation, and practical limitations, with interest in applying them through hands on learning.
+                    </p>
+                </div>
+
+                <div class="concept-card">
+                    <h3>Collaboration & Communication</h3>
+                    <p>
+                        Ability to ask questions, explain ideas clearly, document problems and solutions, and contribute
+                        actively within a small development team.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <section id="experience">
         <div class="section-header">
