--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                         Compose.
                     </p>
                     <div class="project-links">
-                        <a href="https://youtu.be/YOUR_VIDEO_LINK" class="project-btn" target="_blank">
+                        <a href="https://youtu.be/sHfIbuZNRos" class="project-btn" target="_blank">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2">
                                 <polygon points="5 3 19 12 5 21 5 3"></polygon>
