--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     </section>
     <section id="concepts">
         <div class="section-header">
-            
+
             <h2 class="section-title">Engineering Concepts & Technical Knowledge</h2>
         </div>
 
@@ -467,34 +467,43 @@
                     </svg>
                 </div>
                 <div class="project-info">
-                    <h3>Scholarship Database</h3>
-                    <p class="project-tech">CMS • JavaScript(Velo) • Database Design</p>
-                    <p>Two bilingual database sections built with Wix CMS to display opportunities such as scholarships
-                        and internships for displaced Refugees. Dynamic tools connected through Wix Data API, with
-                        custom JavaScript added to ensure responsive behavior not supported by default.</p>
+                    <h3>Skylens – Aircraft Conflict Detection Tool</h3>
+                    <p class="project-tech">React • NestJS • TypeScript • Algorithm Design • Simulation</p>
+                    <p>
+                        Built during the NAV CANADA-sponsored challenge at the uOttaHack 8 hackathon, Skylens is a
+                        real-time simulation tool designed to detect and visualize potential mid-air aircraft conflicts
+                        based on flight trajectory data. The goal was to explore ways technology could support air
+                        traffic safety by detecting risks before they become emergencies.
+                        <br><br>
+                        I was responsible for developing the core algorithm that processes aircraft positions, altitude, speed, and heading
+                        to identify when two or more flights enter a potential conflict zone. With our team, we  implemented the
+                        solution with a React front-end and NestJS backend to make the logic interactive and clear. The
+                        final prototype was presented to NAV CANADA mentors and received positive feedback for its
+                        simplicity and practical use.
+                    </p>
                     <div class="project-links">
-                        <a href="https://www.unborderedknowledge.com/scholarships" class="project-btn" target="_blank">
+                        <a href="https://skylens-wz2k.vercel.app/" class="project-btn" target="_blank">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2">
                                 <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                                 <polyline points="15 3 21 3 21 9"></polyline>
                                 <line x1="10" y1="14" x2="21" y2="3"></line>
                             </svg>
-                            Live 1
+                            Demo
                         </a>
-                        <a href="https://www.unborderedknowledge.com/international-opps" class="project-btn"
-                            target="_blank">
+                        <a href="https://heaps-city-59348599.figma.site/" class="project-btn" target="_blank">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2">
                                 <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                                 <polyline points="15 3 21 3 21 9"></polyline>
                                 <line x1="10" y1="14" x2="21" y2="3"></line>
                             </svg>
-                            Live 2
+                            Figma Problem Overview
                         </a>
                     </div>
                 </div>
             </div>
+
 
 
             <div class="project-card">
