added the experience of summer 2023

--- a/index.html
+++ b/index.html
@@ -371,6 +371,16 @@
                 </div>
                 <div class="timeline-dot"></div>
             </div>
+            <div class="timeline-item">
+                <div class="timeline-content">
+                    <div class="timeline-date">May – Aug 2023</div>
+                    <h3 data-i18n="experience.item5.title">Programming Assistant (CO-OP)</h3>
+                    <h4 data-i18n="experience.item5.org">University of Ottawa</h4>
+                    <p data-i18n="experience.item5.desc">Designed clean HTML layouts to improve readability and structure. Reviewed content and translated
+                        instructional materials to French.</p>
+                </div>
+                <div class="timeline-dot"></div>
+            </div>
         </div>
     </section>
 
